Update pt-BR translation

--- a/data/locale/pt-BR.ini
+++ b/data/locale/pt-BR.ini
@@ -18,6 +18,9 @@ Erase="Apagar"
 Clear="Limpar"
 Config="Configurar"
 Cursor="Cursor"
+CursorFile="Arquivo do cursor"
+CursorHide="Esconder cursor após"
+CursorTime="Duração do cursor"
 Show="Mostrar"
 Color="Cor"
 CursorColor="Cor do cursor"
@@ -32,6 +35,7 @@ FavoriteTools="Ferramentas favoritas"
 AddCurrent="Adicionar atual"
 SetToCurrent="Definir para atual"
 Remove="Remover"
+Tool="Ferramenta"
 ToolName="Nome da ferramenta"
 DrawFavoriteTool="Ferramenta de desenho"
 DrawClear="Apagar tudo"
@@ -41,6 +45,7 @@ Windowed="Em janela"
 Stamp="Carimbo"
 Image="Imagem"
 ToolImage="Imagem da ferramenta"
+ToolImageFile="Arquivo de imagem da ferramenta"
 CursorImage="Imagem do cursor"
 AlwaysOnTop="Manter no topo"
 DrawShow="Mostrar janela ou dock do Draw"
